docs/apim/4.2/guides/api-configuration/v4-api-configuration/documentation.md
---
description: An overview about Documentation.
---

# Documentation

{% hint style="warning" %}
As of Gravitee 4.2, the APIM Documentation feature is only available for v4 APIs.
{% endhint %}

## Overview

Documentation can be added via the APIM Management Console to inform API consumers how to use an API. If the API and documentation are both published to the Developer Portal, the documentation will appear in the Portal for consumers to discover.

## Add documentation

To add documentation to an API:

1. Select **APIs** from the left sidebar of the Management Console
2. Select the API you want to document
3. Select **Documentation** from the inner left sidebar
4. Click on **Add new page** or **Add new folder** to start structuring your documentation content

<figure><img src="../../../.gitbook/assets/documentation_nothing added.png" alt="The Documentation page of an API, empty, with a message that no pages are available yet and Add new folder and Add new page buttons."><figcaption><p>Add pages and/or folders to your API documentation</p></figcaption></figure>

### Add folders

Folders allow you to organize your documentation by grouping pages. To configure your first folder:

1. From the top-level **Home** directory, click **Add new folder**
2. Specify the following:
   * **Name:** This field is required
   * **Visibility:** Select whether the folder visibility is **Public** or **Private**
     * **Public:** This is the default visibility. The contents of the folder can be viewed in the Developer Portal by anonymous users.
     * **Private:** Users must be authenticated to view the contents of the folder in the Developer Portal

<figure><img src="../../../.gitbook/assets/docs_add folder.png" alt="The Add new folder dialog, with a folder name entered and Public visibility selected over Private."><figcaption><p>Add a folder</p></figcaption></figure>

Once you click **Add folder**, the folder will appear at the top-level **Home** directory in **Documentation**. The directory will show the folder's status, visibility, the time the folder was last updated, and a badge indicating that the entry is a folder.

{% hint style="info" %}
A folder will be **Hidden**, or not visible in the Developer Portal, until it contains published pages.
{% endhint %}

<figure><img src="../../../.gitbook/assets/docs_folder added.png" alt="The Documentation page listing one hidden public folder with its last updated time and edit, reorder, and delete actions."><figcaption><p>Add a folder to Home directory</p></figcaption></figure>

**Documentation** supports a nested structure. Once you've added a folder to the **Home** directory, you can click into it to create additional folders or pages.

### Add pages

Pages allow you to document your API using Markdown. The process of adding a page consists of the following steps:

#### Step 1: Configure a page

The first step is page configuration, which consists of naming the page and selecting whether the page is **Public** or **Private**:

* **Name:** This field is required
* **Visibility:** Select whether the folder visibility is **Public** or **Private**
  * **Public:** This is the default visibility. The page can be viewed in the Developer Portal by anonymous users.
  * **Private:** Users must be authenticated to view the page in the Developer Portal

<figure><img src="../../../.gitbook/assets/docs_add page.png" alt="The Configure page step of the documentation page wizard, with a page name entered and Public visibility selected."><figcaption><p>Page configuration</p></figcaption></figure>

#### Step 2: Add content

Enter the page content in the Markdown text editor. **Toggle preview** enables a side-by-side view of the content you enter and the rendered page.

<figure><img src="../../../.gitbook/assets/docs_page content.png" alt="The Add content step of the page wizard, with a Markdown template in the editor and its rendered preview beside it, above Save and publish, Save, and Previous buttons."><figcaption><p>Add page content</p></figcaption></figure>

You have the option to save the page with or without publishing it to the Developer Portal. Once the content is saved, the page can be viewed from whichever directory it was added to. The directory will show the page's status, visibility, the time the page was last updated, and a badge indicating that the entry is a page.

<figure><img src="../../../.gitbook/assets/docs_nested.png" alt="The Documentation page inside a folder, listing a hidden subfolder and a published page with their visibility and last updated times."><figcaption><p>Test page added to test folder</p></figcaption></figure>

## Editing

To edit or delete folders or pages, or to change the documentation structure, use the icons in the **Actions** section of an entry. All edits are immediately shown in the Developer Portal.

<figure><img src="../../../.gitbook/assets/docs_editing.png" alt="A documentation pages table listing a hidden public subfolder and a published public page with their last updated times and edit, unpublish, reorder, and delete actions."><figcaption><p>Select from Actions to edit</p></figcaption></figure>

**Edit folders:** To edit a folder's name or visibility, click on the pencil icon in the folder's entry, change the name and/or visibility, then click **Save**. The changes made to a folder's visibility will impact who can see it in the Developer Portal.

**Edit pages:** To edit an existing page, click on the pencil icon in the page's entry, and change the name, visibility, and/or content. If the page is already published, click **Publish changes**. If the page is not published, you will have the option to **Save** or **Save and publish** your changes.

**Delete:** To delete a page or folder, click the associated trash icon. Only empty folders can be deleted.

**Publish/unpublish:** To publish or unpublish a page, click the cloud icon.

**Reorder:** To change the order of pages and folders in a directory, use the up and down arrows.

## View documentation

API documentation is visible in the Developer Portal if both the API and documentation have been published. In order for a folder to be visible in the Portal, it must contain at least one published page. Otherwise, the folder will be tagged as **Hidden**.

To view the documentation in the Developer Portal:

1.  Click **Open API in Developer Portal**

    <figure><img src="../../../.gitbook/assets/docs_open api.png" alt="The Documentation page with the Open API in Developer Portal button circled above a folder and a published page."><figcaption><p>Open API in Developer Portal</p></figcaption></figure>
2.  Click on **Documentation** in the header options

    <figure><img src="../../../.gitbook/assets/docs_dev portal docs.png" alt="The Documentation tab of an API in the developer portal, showing a sample Markdown page beside a page tree and a table of contents."><figcaption><p>API documentation</p></figcaption></figure>
